feat: expand immersive mode libraries and media
